--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div>
         Question 5
         Return the mean and sum of an array of numbers
-    </div>
+    </div><br/><br/>
     <button id="numbers" onclick="creat()">Create a list</button><br/><br/>
     <button onclick="caculate()">Calculate the mean and the sum</button><br/><br/>
     <div id="result"></div>
